--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -56,5 +56,15 @@ services:
       - kratos
     restart: unless-stopped
 
+  cloudflared:
+    image: cloudflare/cloudflared:latest
+    command: tunnel run
+    environment:
+      - TUNNEL_TOKEN=${CLOUDFLARE_TUNNEL_TOKEN}
+    restart: unless-stopped
+    depends_on:
+      - kratos
+      - kratos-ui
+
 volumes:
   postgres_data:
